hphp/test/quick/hh_bad_start.php.expectf

Fatal error: HH mode: content before <?hh (Line: %d, Char: %d)
syntax error, unexpected T_HH_ERROR, expecting $end in %s on line 1
